# bigbrother

./: README.MD
.github/workflows/: cross-build.yaml
brain/: .gitignore  Dockerfile  docker-compose.yaml  requirements.txt  run.sh  start_mongo.sh
brain/src/: database.py  middleware.py  server.py  settings.py  types.py
eye/: Cargo.toml  Dockerfile  docker-compose.yaml  finish_build.sh  get_latest_release.sh  make_release.sh  make_releases.sh
eye/src/: main.rs  telemetry.rs  types.rs  utils.rs
face/: .dockerignore  Dockerfile  docker-compose.yaml  docker-entrypoint.sh  index.html  package.json  vite.config.ts
face/src/: App.tsx  api.ts  index.css  types.tsx
face/src/components/: Actions.tsx  Button.tsx  Charts.tsx  Eyeball.tsx  Index.tsx  Indicators.tsx  Login.tsx  UpdateOptions.tsx
face/src/hooks/: Index.tsx  Mini.tsx  MiniEyeball.tsx
face/src/styles/: Index.module.css
stress-tests/: btypes.py  cpu_script.py  no workload with metrics  overload_server.py  print_script.py  stress-server.py  stress_script.sh
