[package]
name = "bb_eye"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.1"
log = "0.4.22"
sysinfo = "0.32.0"
fs_extra = "1.3.0"
chrono = "0.4.38"
serde = { version = "1.0.200", features = ["derive"] }
rmp-serde = "1.1.4"
users = "0.11.0"
hostname = "0.4.0"
reqwest = "0.12.9"
once_cell = "1.19.0"
tokio = { version = "1.41.1", features = ["full"] }