[package]
name = "bb_eye"
version = "0.5.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.1"
log = "0.4.22"
sysinfo = "0.32.0"
fs_extra = "1.3.0"
chrono = "0.4.38"
serde = { version = "1.0.200", features = ["derive"] }
rmp-serde = "1.1.4"
whoami = "1.5.2"
hostname = "0.4.0"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls"] }
once_cell = "1.19.0"
tokio = { version = "1.41.1", features = ["full"] }
